refactor: migrate to spring boot 3 PR comment fixes(spelling, syntax sugar )
Closes XRDDEV-2491