@@ -138,7 +138,7 @@ public class CommonPageObj {
 
     public class Alerts {
         public SelenideElement alert(final String text) {
-            return $x(String.format("//div[@data-test='contextual-alert']//div[contains(text(), '%s')]", text));
+            return $x("//div[@data-test='contextual-alert']//div[contains(text(), '%s')]".formatted(text));
         }
 
         public SelenideElement btnClose() {
